# LevelUp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  install.ps1  install.sh  levelup.yaml  pyproject.toml
.claude/: settings.local.json
levelup/: 20260209-add-red-test-step.md  20260209-branch-name-convention-option.md  20260209-make-previous-runs-removeable.md  20260210-ticket-1-light-mode.md  20260211-ticket-10-bug-can-t-scroll-up-in-integrated-terminal.md  20260211-ticket-12-add-gui-navigation-hotkeys.md  20260211-ticket-13-record-branch-name.md  20260211-ticket-13-status-dropdown.md  20260211-ticket-16-bug-incorrect-color-for-tickets-in-sidebar.md  20260211-ticket-16-create-command-to-change-branch-naming-convention.md  20260211-ticket-19-bug-can-t-tab-out-of-ticket-description-box.md  20260211-ticket-2-bug-fix-usage-doesn-t-track-tokens.md  20260211-ticket-20-bug-auto-approve-checkpoints-checkbox.md  20260211-ticket-21-bug-failed-to-remove-worktree.md  20260211-ticket-22-bug-tickets-hard-to-read-in-light-mode.md  20260211-ticket-23-bug-integrated-terminal-always-dark.md  20260211-ticket-23-feature-ticket-descriptions-should-accept-pasted-i.md  20260211-ticket-24-bug-copying-texted-in-scrolled-up-in-integrated-te.md  20260211-ticket-24-ticket-form-has-fields-that-should-be-run-options.md  20260211-ticket-25-feature-merge-branch-from-within-gui.md  20260211-ticket-26-hide-merged-features-by-default.md  20260211-ticket-3-add-a-red-test-step.md  20260211-ticket-4-auto-approve.md  20260211-ticket-5-bug-fix-run-tries-to-merge.md  project_context.md  (+7 more)
(+244 files in other folders)
