[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "levelup"
version = "0.1.4"
description = "AI-Powered TDD Development Tool"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.78.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "prompt-toolkit>=3.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
]

[project.optional-dependencies]
gui = ["PyQt6>=6.6.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "PyQt6>=6.6.0",
]

[project.scripts]
levelup = "levelup.cli.app:app"

[project.entry-points."levelup.ticket_sources"]

[tool.hatch.build.targets.wheel]
packages = ["src/levelup"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
